# sov

./: Cargo.toml
benches/: simple_struct.rs
examples/: simple.rs
src/: lib.rs  util.rs
src/codegen/: main_impl_block.rs  mod.rs
src/codegen/impl_block/: constructors.rs  get.rs  insert.rs  mod.rs  remove.rs
src/codegen/structs/: mod.rs  ref_and_ref_mut.rs  vec.rs
src/parse/: mod.rs
