[package]
name = "sov"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", featues = ["full"] }
proc-macro2 = "1"
quote = "1"
convert_case = "0.6.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "simple_struct"
harness = false
